# rustros_example

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: parameters.rs
